--- a/SwingH2Funcionando/pom.xml
+++ b/SwingH2Funcionando/pom.xml
@@ -29,6 +29,14 @@
             <artifactId>h2</artifactId>
             <version>1.4.199</version>
         </dependency>
+        <!-- MySQL e MariaDB -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.16</version>
+            <!-- ou versão que já existir na .m2 local -->
+        </dependency>
+
 </dependencies>
 
 </project>
