--- a/SwingH2Funcionando/pom.xml
+++ b/SwingH2Funcionando/pom.xml
@@ -36,7 +36,18 @@
             <version>8.0.16</version>
             <!-- ou versão que já existir na .m2 local -->
         </dependency>
-
+        <!-- FAKER -->
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+        <!-- LOOCA -->
+        <dependency>
+            <groupId>com.github.britooo</groupId>
+            <artifactId>looca-api</artifactId>
+            <version>1.0.3</version>
+        </dependency>
 </dependencies>
 
 </project>
