--- a/JAR-inicial/pom.xml
+++ b/JAR-inicial/pom.xml
@@ -48,6 +48,15 @@
             <artifactId>looca-api</artifactId>
             <version>1.0.3</version>
         </dependency>
-</dependencies>
-
+        <!-- Boot Telegram -->
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>5.3.0</version>
+        </dependency>
+        
+    </dependencies>
+    <build>
+        <finalName>${KeepSwimming}</finalName>
+    </build>
 </project>
