--- a/JAR-inicial/pom.xml
+++ b/JAR-inicial/pom.xml
@@ -11,6 +11,7 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
     
+      
     <dependencies>
         <!-- dependências do spring jdbc -->
         <dependency>
@@ -48,6 +49,41 @@
             <artifactId>looca-api</artifactId>
             <version>1.0.3</version>
         </dependency>
-</dependencies>
-
+        <!-- Boot Telegram -->
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>5.3.0</version>
+        </dependency>
+    </dependencies>
+    
+        <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.4.1</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.mycompany.swing.KeepSwimming</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+    
 </project>
