--- a/JAR-inicial/pom.xml
+++ b/JAR-inicial/pom.xml
@@ -55,6 +55,15 @@
             <artifactId>telegrambots</artifactId>
             <version>5.3.0</version>
         </dependency>
+        <!-- AZURE (SQL) -->
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>7.2.2.jre8</version>
+            <!-- ou versão 7.2.2.jre11, se sua JDK for a 11 -->
+            <!-- ou versão que já existir na .m2 local -->
+        </dependency>
+
     </dependencies>
     
         <build>
