--- a/JAR-inicial/pom.xml
+++ b/JAR-inicial/pom.xml
@@ -54,24 +54,31 @@
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots</artifactId>
             <version>5.3.0</version>
+            
+        </dependency>
+               
+        <dependency>
+            <groupId>com.github.pengrad</groupId>
+            <artifactId>java-telegram-bot-api</artifactId>
+            <version>5.0.1</version>
         </dependency>
         <!-- AZURE (SQL) -->
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
-                <version>7.2.2.jre8</version>
+            <version>7.2.2.jre8</version>
             <!-- ou versão 7.2.2.jre11, se sua JDK for a 11 -->
             <!-- ou versão que já existir na .m2 local -->
         </dependency>
         <dependency>
             <groupId>com.google.http-client</groupId>
             <artifactId>google-http-client</artifactId>
-                    <version>1.41.2</version>
+            <version>1.41.2</version>
         </dependency>
 
     </dependencies>
     
-        <build>
+    <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
